@@ -1,5 +1,5 @@
 Package: mgcv
-Version: 1.6-1
+Version: 1.6-2
 Author: Simon Wood <simon.wood@r-project.org>
 Maintainer: Simon Wood <simon.wood@r-project.org>
 Title: GAMs with GCV/AIC/REML smoothness estimation and GAMMs by PQL
